# dorian

./: .gitignore  README.md  dorian.sh
Assistant/: pyproject.toml
Assistant/src/dorian/: app.py
Assistant/src/dorian/terminal/: dashboard.py  main_style.css
Installations/: docker.sh  github.sh  menu.sh  obsidian.sh  poetry.sh  rust.sh  signal.sh  vscode.sh
Installations/wtf/: update_wtf.sh  wtf.sh  wtf_config.yml
Scripts/: menu.sh  poetry_rust_setup.sh  poetry_setup.sh  pythonweb.sh  rust_setup.sh
Scripts/templates/: nicegui.txt
Setup/: basic_aliases.sh  git_setup.sh  menu.sh  script_aliases.sh  terminal_setup.sh
