[tool.poetry]
name = "dorian"
version = "0.1.0"
description = ""
authors = ["Dennis <dennis.diekmann@uni-oldenburg.de>"]
readme = "README.md"
packages = [{include = "dorian", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.46.0"
textual-dev = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
